# Personal

./: .gitignore
vscode-dataflow-analyzer/: .gitignore  1PENDING_CHANGES.md  AUTOMATED_VALIDATION_STEPS.md  BUILD_AND_RUN_LAUNCH.md  C++_Dataflow_Analyzer_Presentation.pptx  CFG_ACADEMIC_DISPLAY_FIX.md  CFG_COMPARISON_VISUAL.md  CFG_DRY_RUN_ANALYSIS.md  CFG_GENERATION_ARCHITECTURE.md  CFG_VERIFICATION_COMPLETE.md  CHANGELOG.md  CLICK_ME.md  CODEBASE_REVIEW_v1.8.2.md  CODE_COMMENTS_GUIDE.md  CODE_REVIEW_ISSUES.md  CODE_STRUCTURE.md  COMMENTING_COMPLETE_v1.1.md  COMMENTING_IMPROVEMENTS_v1.1.md  COMMENTS_SUMMARY.md  COMPILATION_FIXES_SUMMARY.md  COMPLETION_SUMMARY_v1.8.2.md  DRY_RUN_ANALYSIS.md  DRY_RUN_UI_EXPECTATIONS.md  FINAL_ACTION_REQUIRED.md  FINAL_COMPILATION_STEP.md  FIXES_v1.9.0.md  FIXES_v1.9.1.md  FUTURE_PLANS.md  GUI_INTEGRATION_COMPLETE.md  HOW_TO_RUN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  INDEX_SESSION_RESULTS.md  INTERCONNECTED_CFG_IMPLEMENTATION.md  INTER_PROCEDURAL_FRAMEWORK.md  IPA_FRAMEWORK_SUMMARY.md  IPA_IMPLEMENTATION_STATUS.md  IPA_PHASE1_COMPLETION.md  IPA_PHASE2_COMPLETION.md  IPA_PHASES_1_2_SUMMARY.md  (+84 more)
vscode-dataflow-analyzer/cpp-tools/cfg-exporter/: CMakeLists.txt  README.md  cfg-exporter.cpp
vscode-dataflow-analyzer/md_files/: FRAMEWORK.md  FUTURE_PLANS.md  PLAN_FOR0a.md  README.md  TO_DO.md
vscode-dataflow-analyzer/src/: extension.ts  types.ts
vscode-dataflow-analyzer/src/analyzer/: CPPParser.ts  CallGraphAnalyzer.Extensions.ts  CallGraphAnalyzer.ts  ClangASTParser.ts  ContextSensitiveTaintAnalyzer.ts  DataflowAnalyzer.ts  (+14 more)
(+9 files in other folders)
